envoyfilter-teaching/envoyfilter/kafka_mesh/svc-kafka-producer.yaml
apiVersion: v1
kind: Service
metadata:
  name: kafka-producer
spec:
 selector:  
   app: kafka-producer
 type: ClusterIP
 ports:
 -  name: http
    port: 8000      
    targetPort: 80
