envoyfilter-teaching/envoyfilter/kafka_mesh/ef-kafka_mesh-upstream_clusters.yaml
apiVersion: networking.istio.io/v1alpha3
kind: EnvoyFilter
metadata:
  name: kafka-mesh
  namespace: istio
spec:
  workloadSelector:
    labels:
      app: kafka-producer
  configPatches:
  - applyTo: LISTENER
    match:
      context: SIDECAR_OUTBOUND
    patch:
      operation: ADD
      value:
        name: kafka
        address:
          socket_address:
            protocol: TCP
            address: 127.0.0.1
            port_value: 29092
        filter_chains:
        - filters:
           -  name: envoy.filters.network.kafka_mesh
              typed_config:
                "@type": type.googleapis.com/envoy.extensions.filters.network.kafka_mesh.v3alpha.KafkaMesh
                advertised_host: "127.0.0.1"
                advertised_port: 29092
                upstream_clusters:
                - cluster_name: kafka-c1
                  bootstrap_servers: kafka-all-broker.istio:29092
                  partition_count: 3
                  producer_config:
                    acks: "1"
                    linger.ms: "500"
                - cluster_name: kafka-c2
                  bootstrap_servers: kafka-c2-all-broker.istio:29092
                  partition_count: 3
                  producer_config:
                    acks: "1"
                    linger.ms: "500"
                forwarding_rules:
                - target_cluster: kafka-c1
                  topic_prefix: my-topic
                - target_cluster: kafka-c2
                  topic_prefix: test
